# actix-eval-mono

./: .gitignore  .gitmodules  package.json
backend-actix/: Cargo.toml  dockerfile
backend-actix/api/: Cargo.toml
backend-actix/api/src/: lib.rs
backend-actix/api/src/controller/: channel_controller.rs  message_controller.rs  mod.rs  profile_controller.rs
backend-actix/entity/: Cargo.toml
backend-actix/entity/src/: channel_entity.rs  channel_members.rs  lib.rs  message_entity.rs  mod.rs  prelude.rs  profile_entity.rs
backend-actix/entity/src/utils/: mod.rs  time.rs  uuid.rs
backend-actix/service/: Cargo.toml
backend-actix/service/src/: auth.rs  channel.rs  lib.rs  message.rs  profile.rs
backend-actix/src/: main.rs
backend-actix/src/controller/: channel_controller.rs  messages.rs  mod.rs  profile.rs
backend-actix/src/data/: mod.rs
backend-actix/src/data/entities/: channel_entity.rs  message_entity.rs  mod.rs
backend-actix/src/data/models/: channel.rs  message.rs  mod.rs
backend-actix/src/services/: channel_controller.rs  message_controller.rs  mod.rs
backend-spring/: pom.xml
docs/: index.md  tutorial.md
docs/api/: endpoints.md  websocket.md
docs/models/: authentication.md  channel.md  message.md  user.md
docs/tests/: k6.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: send-bar.vue
frontend/src/views/: channel.vue
notes/: .gitignore
notes/Work Documentation/: 05-07-2024.md
shared/src/sql/: create_table_channels.sql  create_table_messages.sql  create_table_profiles.sql
tests/http/src/: http-client.env.json
tests/k6/: actix-profiles-messages.json  package.json
tests/visualization/: display.py  time_graph.py
(+43 files in other folders)
