[package]
name = "backend-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres","runtime-async-std-native-tls"] }
uuid = { version = "1.9", features = ["serde", "v4"] }